[tool.poetry]
name = "necst-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b"
flake8 = "^3.8"
sphinx = "^3.3"
pydata-sphinx-theme = "^0.4"
m2r2 = "^0.2"
ipykernel = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
